fixign stles on mobile?

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ label {
   padding: 5px 0;
 }
 
-input[type='number'] {
+input.form_input {
   background: rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.2);
   color: #CCC;
